# glcs-packetstream

./: NEWS  README
examples/: CMakeLists.txt  crc32.c  drain_test.c
src/: packetstream.c  packetstream.h
